PHOENIX-7418 SystemExitRule errors out because of SecurityManager deprecation / removal
run tests with -Djava.security.manager=allow
Catch and log SecurityManager exceptions in SystemExitRule